fixed text alignment inside frames

--- a/css/style.css
+++ b/css/style.css
@@ -55,23 +55,24 @@ body {
     background-size: cover;
     text-align: center;
     position: absolute;
-    bottom: 50%;
+    bottom: 40%;
     left: 0;
     width: 100%;
 }
 .stats-container p {
-    font-size: 1vw;
+    font-size: 1.7vw;
 }
 .stats-container span {
     padding-left: 15px;
 }
 .level-container, .attempts-container, .accuracy-container {
     background: url(../assets/images/frame.png) no-repeat;
+    background-position: center;
     background-size: contain;
     display: flex;
     flex-flow: column;
-    margin: 10px auto;
-    width: 75%;
+    margin: auto;
+    width: 85%;
 }
 
 /*==========================================================
@@ -394,21 +395,31 @@ i:hover {
         height: 100%;
     }
     .stats-container p {
-        font-size: 1.8vw;
-        margin: 2px;
+        font-size: 3.25vw;
+        margin: auto;
     }
     .stats-container span {
-        padding-left: 10px;
+        padding-left: 3px;
     }
     .level-container, .attempts-container, .accuracy-container {
-        background-size: 100% 100%;
-        width: 75%;
+        background-position: center;
+        background-size: 100% 80%;
+        margin: 0;
+        width: 100%;
         height: 33%;
     }
 
-    /* Start Volume and Restart Containers */
+    /* Start Volume, Instructions, and Restart Containers */
     .volume-container, .restart-container, .info-container {
         font-size: 5vw;
+    }
+    .restart-container {
+        top: 0;
+        right: 23%;
+    }
+    .info-container {
+        top: 0;
+        right: 14%;
     }
 
     /* Start Game Level Containers */
